--- a/package.json
+++ b/package.json
@@ -1,43 +1,80 @@
 {
-  "name": "skylab-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.0",
-    "@types/node": "^16.11.33",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "skylab-frontend",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@chakra-ui/icons": "^2.0.0",
+        "@chakra-ui/react": "^2.0.2",
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@metamask/jazzicon": "^2.0.0",
+        "@reduxjs/toolkit": "^1.8.1",
+        "@types/node": "^17.0.34",
+        "@types/react": "^18.0.9",
+        "@types/react-dom": "^18.0.4",
+        "@types/react-redux": "^7.1.24",
+        "@types/react-router-dom": "^5.3.3",
+        "@web3-react/core": "^6.1.9",
+        "@web3-react/injected-connector": "^6.0.7",
+        "@web3-react/network-connector": "^6.2.9",
+        "@web3-react/walletconnect-connector": "^6.2.13",
+        "@web3-react/walletlink-connector": "^6.2.14",
+        "ethers": "^5.6.6",
+        "framer-motion": "^6.3.3",
+        "i18next": "^21.8.2",
+        "i18next-browser-languagedetector": "^6.1.4",
+        "i18next-fetch-backend": "^4.1.2",
+        "lodash": "^4.17.21",
+        "react": "^18.1.0",
+        "react-app-rewired": "^2.2.1",
+        "react-device-detect": "^2.2.2",
+        "react-dom": "^18.1.0",
+        "react-i18next": "^11.16.9",
+        "react-icons": "^4.3.1",
+        "react-redux": "^8.0.1",
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "^5.0.1",
+        "react-scroll": "^1.8.7",
+        "typescript": "^4.6.4",
+        "util": "^0.12.4",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.2.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.0",
+        "@types/react-scroll": "^1.8.3",
+        "@web3-react/types": "^6.0.7",
+        "buffer": "^6.0.3",
+        "eslint": "^7.11.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.29.4",
+        "prettier": "^2.6.2"
+    }
 }
