--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "skylab-frontend",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://skylabhq.github.io/skylab-frontend/",
     "dependencies": {
         "@chakra-ui/icons": "^2.0.0",
         "@chakra-ui/react": "^2.0.2",
@@ -44,7 +45,9 @@
         "start": "react-app-rewired start",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -76,6 +79,7 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.29.4",
+        "gh-pages": "^4.0.0",
         "prettier": "^2.6.2"
     }
 }
