--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@web3-react/walletlink-connector": "^6.2.14",
         "ethers": "^5.6.6",
         "framer-motion": "^6.3.3",
+        "gh-pages": "^4.0.0",
         "i18next": "^21.8.2",
         "i18next-browser-languagedetector": "^6.1.4",
         "i18next-fetch-backend": "^4.1.2",
@@ -47,7 +48,7 @@
         "test": "react-app-rewired test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -b gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -79,7 +80,6 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.29.4",
-        "gh-pages": "^4.0.0",
         "prettier": "^2.6.2"
     }
 }
