--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "skylab-frontend",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://skylabhq.github.io/skylab-frontend/",
+    "homepage": ".",
     "dependencies": {
         "@chakra-ui/icons": "^2.0.0",
         "@chakra-ui/react": "^2.0.2",
@@ -47,7 +47,6 @@
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
         "eject": "react-scripts eject",
-        "predeploy": "npm run build",
         "deploy": "gh-pages -b gh-pages -d build"
     },
     "eslintConfig": {
