--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
         "eject": "react-scripts eject",
+        "predeploy": "npm run build",
         "deploy": "gh-pages -b gh-pages -d build"
     },
     "eslintConfig": {
