--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "skylab-frontend",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://slylab.wtf",
+    "homepage": "https://skylab.wtf",
     "dependencies": {
         "@chakra-ui/icons": "^2.0.0",
         "@chakra-ui/react": "^2.0.2",
@@ -20,7 +20,7 @@
         "@web3-react/network-connector": "^6.2.9",
         "@web3-react/walletconnect-connector": "^6.2.13",
         "@web3-react/walletlink-connector": "^6.2.14",
-        "ethers": "^5.6.6",
+        "ethers": "^5.7.2",
         "framer-motion": "^6.3.3",
         "gh-pages": "^4.0.0",
         "i18next": "^21.8.2",
@@ -37,6 +37,7 @@
         "react-router-dom": "^6.3.0",
         "react-scripts": "^5.0.1",
         "react-scroll": "^1.8.7",
+        "snarkjs": "^0.6.7",
         "swiper": "^8.1.5",
         "typescript": "^4.6.4",
         "util": "^0.12.4",
@@ -75,11 +76,20 @@
         "@types/jest": "^27.5.0",
         "@types/react-scroll": "^1.8.3",
         "@web3-react/types": "^6.0.7",
+        "assert": "^2.0.0",
         "buffer": "^6.0.3",
+        "constants-browserify": "^1.0.0",
+        "crypto-browserify": "^3.12.0",
         "eslint": "^7.11.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.29.4",
-        "prettier": "^2.6.2"
+        "https-browserify": "^1.0.0",
+        "os-browserify": "^0.3.0",
+        "prettier": "^2.6.2",
+        "process": "^0.11.10",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
+        "url": "^0.11.0"
     }
 }
