--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "@web3-react/walletconnect-connector": "^6.2.13",
         "@web3-react/walletlink-connector": "^6.2.14",
         "ethers": "^5.7.2",
+        "file-saver": "^2.0.5",
         "framer-motion": "^6.3.3",
         "gh-pages": "^4.0.0",
+        "html2canvas": "^1.4.1",
         "i18next": "^21.8.2",
         "i18next-browser-languagedetector": "^6.1.4",
         "i18next-fetch-backend": "^4.1.2",
@@ -73,6 +75,7 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
+        "@types/file-saver": "^2.0.5",
         "@types/jest": "^27.5.0",
         "@types/react-scroll": "^1.8.3",
         "@web3-react/types": "^6.0.7",
