--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,12 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "paths": { // 指定模块的路径，和baseUrl有关联，和webpack中resolve.alias配置一样
+            "@/*": ["./*"]
+        },
+        "baseUrl": "src", // 工作根目录
+
     },
     "include": ["src"]
 }
