--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
+        "suppressImplicitAnyIndexErrors": true,
+        "strictNullChecks": false,
         "paths": { // 指定模块的路径，和baseUrl有关联，和webpack中resolve.alias配置一样
             "@/*": ["./*"]
         },
