--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@web3-react/network-connector": "^6.2.9",
         "@web3-react/walletconnect-connector": "^6.2.13",
         "@web3-react/walletlink-connector": "^6.2.14",
+        "axios": "^1.4.0",
         "ethers": "^5.7.2",
         "file-saver": "^2.0.5",
         "framer-motion": "^6.3.3",
