--- a/package.json
+++ b/package.json
@@ -62,9 +62,11 @@
     },
     "browserslist": {
         "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
+            "chrome >= 67",
+            "edge >= 79",
+            "firefox >= 68",
+            "opera >= 54",
+            "safari >= 14"
         ],
         "development": [
             "last 1 chrome version",
@@ -82,7 +84,6 @@
         "@web3-react/types": "^6.0.7",
         "assert": "^2.0.0",
         "buffer": "^6.0.3",
-        "constants-browserify": "^1.0.0",
         "crypto-browserify": "^3.12.0",
         "eslint": "^7.11.0",
         "eslint-config-prettier": "^8.5.0",
