--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "lodash": "^4.17.21",
         "react": "^18.1.0",
         "react-app-rewired": "^2.2.1",
+        "react-countdown-hook": "^1.1.3",
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.1.0",
         "react-i18next": "^11.16.9",
