--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@web3-react/walletlink-connector": "^6.2.14",
         "axios": "^1.4.0",
         "ethers": "^5.7.2",
+        "ethers-multicall": "^0.2.3",
         "file-saver": "^2.0.5",
         "framer-motion": "^6.3.3",
         "gh-pages": "^4.0.0",
