--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
         "eject": "react-scripts eject",
-        "predeploy": "npm run build",
+        "predeploy": "npm run build && rm -f build/gameboard-traverse_0001.zkey",
         "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
