--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@emotion/react": "^11.9.0",
         "@emotion/styled": "^11.8.1",
         "@metamask/jazzicon": "^2.0.0",
+        "@reactour/tour": "^3.5.0",
         "@reduxjs/toolkit": "^1.8.1",
         "@types/node": "^17.0.34",
         "@types/react": "^18.0.9",
