--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-dom": "^18.1.0",
         "react-i18next": "^11.16.9",
         "react-icons": "^4.3.1",
+        "react-joyride": "^2.5.5",
         "react-redux": "^8.0.1",
         "react-router-dom": "^6.3.0",
         "react-scripts": "^5.0.1",
