--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@web3-react/network-connector": "^6.2.9",
         "@web3-react/walletconnect-connector": "^6.2.13",
         "@web3-react/walletlink-connector": "^6.2.14",
+        "async-mutex": "^0.4.0",
         "axios": "^1.4.0",
         "dayjs": "^1.11.9",
         "ethers": "^5.7.2",
@@ -32,6 +33,7 @@
         "i18next": "^21.8.2",
         "i18next-browser-languagedetector": "^6.1.4",
         "i18next-fetch-backend": "^4.1.2",
+        "install": "^0.13.0",
         "lodash": "^4.17.21",
         "react": "^18.1.0",
         "react-app-rewired": "^2.2.1",
