--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "i18next-fetch-backend": "^4.1.2",
         "install": "^0.13.0",
         "lodash": "^4.17.21",
+        "p-retry": "^6.1.0",
         "p-timeout": "^6.1.2",
         "react": "^18.1.0",
         "react-app-rewired": "^2.2.1",
