--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react-countdown-hook": "^1.1.3",
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.1.0",
+        "react-helmet-async": "^1.3.0",
         "react-i18next": "^11.16.9",
         "react-icons": "^4.3.1",
         "react-redux": "^8.0.1",
