fix: add polygon

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# REACT_APP_CHAINID = 137
-# REACT_APP_RPC_URL = https://rpc.ankr.com/polygon
-REACT_APP_CHAIN_ID = 80001
-REACT_APP_RPC_URL = https://rpc.ankr.com/polygon_mumbai
+REACT_APP_CHAINID = 137
+REACT_APP_RPC_URL = https://rpc.ankr.com/polygon
+# REACT_APP_CHAIN_ID = 80001
+# REACT_APP_RPC_URL = https://rpc.ankr.com/polygon_mumbai
