--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react": "^18.1.0",
         "react-app-rewired": "^2.2.1",
         "react-countdown-hook": "^1.1.3",
+        "react-countup": "^6.5.0",
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.1.0",
         "react-helmet-async": "^1.3.0",
