--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "private": true,
     "homepage": "https://skylab.wtf",
     "dependencies": {
+        "@alchemy/aa-accounts": "0.2.0",
+        "@alchemy/aa-alchemy": "0.2.0",
+        "@alchemy/aa-core": "0.2.0",
         "@chakra-ui/icons": "^2.0.0",
         "@chakra-ui/react": "^2.0.2",
         "@emotion/react": "^11.9.0",
@@ -35,6 +38,7 @@
         "i18next-fetch-backend": "^4.1.2",
         "install": "^0.13.0",
         "lodash": "^4.17.21",
+        "p-queue": "6.6.2",
         "p-retry": "^6.1.0",
         "p-timeout": "^6.1.2",
         "react": "^18.1.0",
@@ -54,6 +58,7 @@
         "swiper": "^8.1.5",
         "typescript": "^4.6.4",
         "util": "^0.12.4",
+        "viem": "^1.19.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
